Fixing content to have a consistent design and better alignment

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -14,13 +14,12 @@ header {
   font-size: 70pt;
 }
 
-.center {
-  text-align: center;
-
+.fa {
+  color: black;
 }
 
-h2, h3 {
-  color: white;
+.center {
+  text-align: center;
 }
 
 .ultralight {
@@ -44,11 +43,7 @@ footer {
 
 body {
   background-color: #156e8b;
-  font-family: "Avenir Next"
-  color: white;
-}
-
-p {
+  font-family: "Avenir Next";
   color: white;
 }
 
